@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-14T08:28:42Z",
-  "count_outdated" : 238,
-  "uniques_outdated" : 114,
-  "count" : 264,
+  "timestamp" : "2022-07-14T16:41:04Z",
+  "count_outdated" : 240,
+  "uniques_outdated" : 115,
+  "count" : 266,
   "uniques" : 130,
   "clones" : [
-    {
-      "timestamp": "2022-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-01T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
